--- a/Plachta/Client/Components/PlachtaAktivitaView.razor
+++ b/Plachta/Client/Components/PlachtaAktivitaView.razor
@@ -7,7 +7,7 @@
 @inject IJSRuntime JSRuntime
 
 <div @ref="AktivitaHtmlElement" class="aktivita" draggable="true" @ondragstart="e => HandleDragStart(e)" style="left:@Pozicia.ToString("N",CultureInfo.InvariantCulture)%; width: @Trvanie.ToString("N",CultureInfo.InvariantCulture)%">
-    @Aktivita.Nazov
+    @((MarkupString)Aktivita.Design)
 </div>
 
 
@@ -31,4 +31,18 @@
         var aktivitaBoundingBox = await JSRuntime.InvokeAsync<BoundingClientRect>("Plachtovac.getBoundingClientRect", AktivitaHtmlElement);
         SelectionOffset = args.ClientX - aktivitaBoundingBox.x;
     }
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        base.OnAfterRender(firstRender);
+        if (firstRender)
+        {
+            Aktivita.PropertyChanged += (sender, args) =>
+            {
+                Console.WriteLine("Called state changed");
+                StateHasChanged();
+            };
+        }
+    }
+
 }
