--- a/Plachta/Client/_Imports.razor
+++ b/Plachta/Client/_Imports.razor
@@ -5,3 +5,7 @@
 @using Microsoft.JSInterop
 @using Plachta.Client
 @using Plachta.Client.Shared
+
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
