--- a/Plachta/Client/wwwroot/css/site.css
+++ b/Plachta/Client/wwwroot/css/site.css
@@ -41,10 +41,10 @@ app {
             margin-left: 1.5rem;
         }
 
-.main .top-row a:first-child {
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
+        .main .top-row a:first-child {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
 
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
@@ -129,12 +129,12 @@ app {
     z-index: 1000;
 }
 
-#blazor-error-ui .dismiss {
-    cursor: pointer;
-    position: absolute;
-    right: 0.75rem;
-    top: 0.5rem;
-}
+    #blazor-error-ui .dismiss {
+        cursor: pointer;
+        position: absolute;
+        right: 0.75rem;
+        top: 0.5rem;
+    }
 
 @media (max-width: 767.98px) {
     .main .top-row:not(.auth) {
@@ -182,7 +182,21 @@ app {
     }
 }
 
+.loader-box {
+    width: 500px;
+    height: 120px;
+    margin: 100px auto;
+    text-align: center;
+    font-family: Consolas, Verdana;
+    font-size: .75em;
+}
 
+    .loader-box .progress {
+        width: 100px;
+        margin-left: 50%;
+        position: relative;
+        left: -50px;
+    }
 
 
 #plachtaUi {
@@ -197,21 +211,21 @@ app {
     display: inline-block;
 }
 
-#plachta-view > div {
-    width: 100%;
-    padding-bottom: 71%;
-    background: gold;
-    position: relative;
-}
+    #plachta-view > div {
+        width: 100%;
+        padding-bottom: 71%;
+        background: gold;
+        position: relative;
+    }
 
-#plachta-view > div > div {
-    top: 0;
-    bottom: 0;
-    position: absolute;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
+        #plachta-view > div > div {
+            top: 0;
+            bottom: 0;
+            position: absolute;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+        }
 
 #plachtaToolBar {
     width: 190px;
@@ -221,14 +235,14 @@ app {
     right: 0;
 }
 
-#plachtaToolBar .card-body,
-#plachtaToolBar .card-header {
-    padding: 5px 10px;
-}
+    #plachtaToolBar .card-body,
+    #plachtaToolBar .card-header {
+        padding: 5px 10px;
+    }
 
-#plachtaToolBar .card-header {
-    cursor: pointer;
-}
+    #plachtaToolBar .card-header {
+        cursor: pointer;
+    }
 
 ul.sablonyAktivit {
     list-style: none;
@@ -256,15 +270,15 @@ ul.sablonyAktivit {
     flex: 1;
 }
 
-.den .title {
-    background: red;
-    width: 50px;
-    height: 100%;
-    position: absolute;
-    writing-mode: vertical-rl;
-    transform: rotate(-180deg);
-    text-align: center;
-}
+    .den .title {
+        background: red;
+        width: 50px;
+        height: 100%;
+        position: absolute;
+        writing-mode: vertical-rl;
+        transform: rotate(-180deg);
+        text-align: center;
+    }
 
 .aktivity {
     width: calc(100% - 52px);
